--- a/github_exercise.html
+++ b/github_exercise.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    Hello
-    Evening
-    Goodbye
-    Hey, it's sunny today!
+    Hello everyone working together!
 </body>
 </html>
